# substrate

./: Cargo.toml  Dockerfile  etfTestSpec.json  etfTestSpecRaw.json
.maintain/local-docker-test-network/: docker-compose.yml
client/consensus/aura/: Cargo.toml
client/consensus/aura/src/: dleq.rs  import_queue.rs  lib.rs  standalone.rs
client/consensus/babe/src/: lib.rs
client/consensus/manual-seal/src/consensus/: aura.rs  timestamp.rs
client/consensus/slots/src/: lib.rs  slots.rs
client/etf/: Cargo.toml  README.md
client/etf/src/: lib.rs
frame/aura/: Cargo.toml
frame/aura/src/: lib.rs  mock.rs  tests.rs
frame/system/benchmarking/src/: mock.rs
primitives/consensus/aura/: Cargo.toml
primitives/consensus/aura/src/: digests.rs  inherents.rs  lib.rs
primitives/consensus/common/src/: error.rs
primitives/consensus/etf/: Cargo.toml  README.md
primitives/consensus/etf/src/: lib.rs
primitives/crypto/ec-utils/src/: bls12_377.rs  bls12_381.rs  bw6_761.rs  ed_on_bls12_377.rs  ed_on_bls12_381_bandersnatch.rs  lib.rs
scripts/: chainspec.sh
test-utils/runtime/: Cargo.toml
test-utils/runtime/src/: lib.rs
