[package]
name = "etf-rpc"
version = "0.10.0"
authors = ["Ideal Labs <https://github.com/ideal-lab5>"]
edition = "2021"
license = "GPL-3.0-or-later"
publish = false
repository = "https://github.com/ideal-lab5/iris/"
description = "RPC interface for deriving slot ids for etf"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }
serde = { version = "1.0.163", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }
sp-api = { version = "4.0.0-dev", default-features = false, path = "../../primitives/api" }
sp-std = { version = "8.0.0", default-features = false, path = "../../primitives/std" }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" }
sp-core = { version = "21.0.0", path = "../../primitives/core" }
sp-rpc = { version = "6.0.0", path = "../../primitives/rpc" }
sp-consensus-slots = { version = "0.10.0-dev", path = "../../primitives/consensus/slots" }
sp-runtime = { version = "24.0.0", path = "../../primitives/runtime" }