[package]
name = "sp-consensus-etf"
version = "0.10.0-dev"
authors = ["Ideal Labs <driemworks@idealabs.networks>"]
description = "Primitives for EtF"
edition = "2021"
license = "Apache-2.0"
homepage = "https://idealabs.network"
repository = "https://github.com/ideal-lab5/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { version = "4.0.0-dev", default-features = false, path = "../../api" }
sp-consensus-slots = { version = "0.10.0-dev", default-features = false, path = "../slots" }
sp-core = { version = "21.0.0", path = "../../core", default-features = false }
sp-std = { version = "8.0.0", default-features = false, path = "../../std" }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"sp-consensus-slots/std",
	"sp-std/std",
	"sp-core/std",
]
